// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormHelperText should render error message 1`] = `
<DocumentFragment>
  <div>
    <p
      class="text-sm text-theme-danger"
    >
      Error Message
    </p>
  </div>
</DocumentFragment>
`;

exports[`FormHelperText should render hint text 1`] = `
<DocumentFragment>
  <div>
    <p
      class="text-sm text-theme-neutral"
    >
      Test Message
    </p>
  </div>
</DocumentFragment>
`;
